--- a/src/main/resources/otomasyon/reservationsystem/reservation-view.fxml
+++ b/src/main/resources/otomasyon/reservationsystem/reservation-view.fxml
@@ -1,44 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="otomasyon.reservationsystem.controller.ReservationController">
+<?import java.lang.Integer?>
+<?import javafx.collections.FXCollections?>
+<AnchorPane prefHeight="554.0" prefWidth="541.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="otomasyon.reservationsystem.controller.ReservationController">
     <children>
-        <VBox layoutX="32.0" layoutY="26.0" prefHeight="200.0" prefWidth="100.0" />
-        <MenuBar layoutX="23.0" layoutY="13.0">
-            <menus>
-                <Menu mnemonicParsing="false" text="Rezervasyon">
-                    <items>
-                        <MenuItem fx:id="rezervasyonMenuItem" mnemonicParsing="false" text="Rezervasyon" onAction="#handleRezervasyonMenuItemAction"/>
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="VIP Oda">
-                    <items>
-                        <MenuItem fx:id="vipOdaMenuItem" mnemonicParsing="false" text="VIP oda" onAction="#handleVipOdaMenuItemAction"/>
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Menü">
-                    <items>
-                        <MenuItem fx:id="menuMenuItem" mnemonicParsing="false" text="Sipariş" onAction="#handleMenuMenuItemAction"/>
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Rezervasyonlarım">
-                    <items>
-                        <MenuItem fx:id="rezervasyonlarimMenuItem" mnemonicParsing="false" text="Rezervasyonlarım" onAction="#handleRezervasyonlarimMenuItemAction"/>
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Siparişlerim">
-                    <items>
-                        <MenuItem fx:id="siparislerimMenuItem" mnemonicParsing="false" text="Siparişlerim" onAction="#handleSiparislerimMenuItemAction"/>
-                    </items>
-                </Menu>
-            </menus>
-        </MenuBar>
-        <Label fx:id="vipOdaLabel" text="VIP Oda" layoutX="200.0" layoutY="200.0" visible="false"/>
+        <GridPane fx:id="tableGrid" hgap="10" layoutX="300.0" layoutY="50.0" vgap="10">
+            <!-- Table buttons will be added dynamically -->
+        </GridPane>
+        <Label layoutX="50.0" layoutY="50.0" text="Person Count:"/>
+        <ComboBox fx:id="personCountComboBox" layoutX="150.0" layoutY="50.0">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <Integer fx:value="1"/>
+                    <Integer fx:value="2"/>
+                    <Integer fx:value="3"/>
+                    <Integer fx:value="4"/>
+                    <Integer fx:value="5"/>
+                    <Integer fx:value="6"/>
+                    <Integer fx:value="7"/>
+                    <Integer fx:value="8"/>
+                    <Integer fx:value="9"/>
+                    <Integer fx:value="10"/>
+                    <Integer fx:value="11"/>
+                    <Integer fx:value="12"/>
+                </FXCollections>
+            </items>
+        </ComboBox>
+
+        <Label layoutX="50.0" layoutY="100.0" text="Start Time:"/>
+        <TextField fx:id="startTimeField" layoutX="150.0" layoutY="100.0" promptText="HH:mm"/>
+        <TextArea layoutX="21.0" layoutY="428.0" prefHeight="83.0" prefWidth="450.0" fx:id="specialRequestsField" promptText="Not Bırakın"/>
+        <Button layoutX="50.0" layoutY="150.0" text="Create Reservation" onAction="#handleCreateReservation"/>
     </children>
 </AnchorPane>
